CSS/mainStyle.css
#loadingScreen {
    position: absolute;
    background-color: #bbbbbb;
    width: 100vw;
    height: 100vh;
    opacity: 0;
    transition-duration: 0.5s;
}

#loadingAssets {
    position: absolute;
    transition-duration: .5s;
    height: 500px;
    width: 500px;
    top: 58%;
    left: 50%;
    transform: translate(-50%, -34%);
}

#loadingScreen img {
    position: absolute;
    left: 61%;
    transform: translate(-50%);
}

#loadingScreen img.words {
    top: 200px;
    left: 47%;
}

#loadingScreen p {
    position: absolute;
    top: -6%;
    left: 46%;
    color: white;
    height: 100px;
    width: 200px;
    padding: 10px;
    background-color: black;
    border-radius: 10%;
}

#loadingScreen #point {
    position: absolute;
    width: 0;
    height: 0;
    left: 224px;
    top: 60px;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 15px solid black;
    transform: rotate(45deg);

}

#loadingScreen.active {
    opacity: 1;
    z-index: 33;
}
.contactInfo {
    height: 32px;
    width: 32px;
}

.contactInfo:active {
    transform: scale(.1);
}

#freeLance, #hired{ /* available; now I can just swiftly change the message to whatever is current!*/
    display: none;
}

.announcement{
    position: absolute;
}
#available, #freeLance, #hired{
    top: 0;
    left: 47%;
    transform: translateX(-50%);
}
#main.announcement{
    top: 20px;
    max-height: 73px;
    overflow: auto;
}
.Portrait.night .page4 .ProjectCard.normalSize{
    background-color: rgba(0, 0, 80, 0.36);
}
.Portrait.day .page4 .ProjectCard.normalSize{
    background-color: rgba(126, 126, 126, 0.36);
}
.page4 .projectTitle{
    font-weight: bold;
    text-decoration: underline;
}
.projectTitle:hover, .projectTitle:active{
    filter: invert(1);
}
.ProjectCard{
    margin-bottom: 10px;
}
.fullSize{
         position: absolute;
         text-align: center;
         top: 0;
         z-index: 10;
         background-color: #000000;
         width: 100%;
         height: 100%;
        padding: 10px;
     }

.stopScroll{
    overflow-y: hidden;
    overflow-x: hidden;
}
.goScroll{
    overflow-y: scroll;
    overflow-x: hidden;
}
#top{
    position: absolute;
    top: 0;
    left: 0;
}
.page4 .ProjectCard{
    transition-duration: 1s;
}


/*mobile nav gets scrunched after 340px. fix action*/
@media screen and (max-width: 340px)  {

    #home, #dayNight, #about, #skills, #work {
        height: 40px;
        width: 60px;
        font-size: 10px;
        padding: 12px 0;
    }

    /*home is page 1*/
    .page1 .line1{
        position: absolute;
        top: -6px;
        left: 50%;
        transform: translateX(-50%);
    }
    .page1 .line1 span{
        position: absolute;
        font-size: 25px;
        font-weight: bold;
    }
    .page1 .line1 span.pt1{
        top: calc(10px + 1vh);
        left: 8vw;
        transform: translateX(-100%);
    }
    .page1 .line1 span.pt2{
        top: calc(30px + 3vh);
        left: 50%;
        transform: translateX(-50%);
    }
    .page1 .line1 span.pt3{
        top: calc(50px + 5vh);
        right: 8vw;
        transform: translateX(75%);
    }

    .page1 .line2{
        position: absolute;
        top: calc(90px + 5vh);
        left: 50%;
        transform: translateX(-50%);
        width: 100%;
        text-align: center;
    }
    .page1 .line3{
        position: absolute;
        font-size: 18px;
        top: calc(5vh + 120px);
        left: 50%;
        width: 100%;
        text-align: center;
        transform: translateX(-50%);
    }
    .line4{
        position: absolute;
        top: calc(34px - 1vh);
        left: 50%;
        transform: translateX(-50%);
        width: 100%;
        text-align: center;
        font-weight: bold;
    }
    .page4 .ProjectCard.normalSize{
        width: 45%;
        max-height: 190px;
        text-align: center;
        overflow-y: scroll;
        overflow-x: hidden;
    }
    .page4 img{
        height: 105px;
        width: 120px;
    }
    .page4 .projectdescription{
        font-size: 14px;
        padding: 7px;
    }
    #contactMe {
        height: 40px;
        width: 60px;
        padding: 9px 0;
        font-size: 9px;
    }
    .page5 .line1{
        position: absolute;
        top: 110px;
    }
    .page5 .line2{
        position: absolute;
        top: 160px;
    }
    .page5 .line3{
        position: absolute;
        top: 210px;
    }


}
/* ... */

